--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,133 +5,173 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: https://1808.cf 二爷翻墙_1, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_2, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_3, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_4, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: 二爷翻墙_1, server: 104.31.16.85, port: 443, type: vmess, uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: a2284cc1, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙_2, server: 104.31.16.86, port: 443, type: vmess, uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: a2284cc1, headers: {Host: dedi2.1808.cf}}}
+  - {name: 二爷翻墙_3, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙_4, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl2.sharecentrepro.com}}}
+  - {name: 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk2.scproxy.top}}}
+  - {name: 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙_16, server: 104.25.167.88, port: 443, type: vmess, uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: a2284cc1, headers: {Host: dedi2.1808.cf}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: 📢 谷歌FCM
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -154,17 +194,22 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
+      - 二爷翻墙_1
+      - 二爷翻墙_2
+      - 二爷翻墙_3
+      - 二爷翻墙_4
+      - 二爷翻墙_5
+      - 二爷翻墙_6
+      - 二爷翻墙_7
+      - 二爷翻墙_8
+      - 二爷翻墙_9
+      - 二爷翻墙_10
+      - 二爷翻墙_11
+      - 二爷翻墙_12
+      - 二爷翻墙_13
+      - 二爷翻墙_14
+      - 二爷翻墙_15
+      - 二爷翻墙_16
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
