--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,308 +8,102 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8080
+    server: ahsorathiyaa.fly.dev
+    port: 443
     cipher: auto
-    uuid: dd87d362-dba1-49aa-9c73-87c828f372d6
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /vmess
       headers:
-        host: ssrsub.v01.ssrsub.com
+        host: ahsorathiyaa.fly.dev
   - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 192.74.232.227
-    port: 52312
+    server: 104.25.177.236
+    port: 8080
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
   - &id003
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 173.249.199.27
-    port: 443
+    server: 104.16.44.213
+    port: 8080
     cipher: auto
-    uuid: e5543efd-5400-3760-9bb6-02767728e888
+    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
   - &id004
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 192.74.232.225
-    port: 443
+    server: 104.25.98.164
+    port: 8080
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
+    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1687338535600
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
   - &id005
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
+    server: 137.175.63.135
+    port: 59009
     cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
+    network: tcp
   - &id006
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 141.101.123.18
-    port: 8880
-    cipher: auto
-    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: uxx.vtcss.top
-  - &id007
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 103.21.244.133
-    port: 8880
-    cipher: auto
-    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: uxx.vtcss.top
-  - &id008
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 198.2.208.68
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.71653718.xyz
-    network: ws
-    ws-opts:
-      path: /path/1689068934789
-  - &id009
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 192.74.232.231
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.54092415.xyz
-    network: ws
-    ws-opts:
-      path: /path/1689673828070
-  - &id010
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 142.4.97.73
-    port: 44942
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-  - &id011
-    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.249.18.161
-    port: 42292
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 23.234.198.86
-    port: 34888
-    cipher: auto
-    uuid: a9abf3e7-87f4-473d-8d03-2f26ca4b3583
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 45.58.186.83
-    port: 51140
-    cipher: auto
-    uuid: 4a138e19-0595-4d51-83c6-fd276cf7d307
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 107.167.29.93
-    port: 45585
-    cipher: auto
-    uuid: 465dec1a-e09b-4bb6-9905-70f75d6035c8
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 107.167.16.214
-    port: 33589
-    cipher: auto
-    uuid: 8c679b81-84fc-43ce-9553-ddca575a6949
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 64.32.20.104
-    port: 40039
-    cipher: auto
-    uuid: c1bad9a6-1482-4941-a0c4-e85f3cbbcb5a
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
     name: 🇫🇷_FR_法国
-    type: ssr
-    server: fr-am1-5.eqsunshine.com
-    port: 8181
-    password: RcfVcDzzB
+    type: ss
+    server: 135.125.244.103
+    port: 989
+    password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id018
-    name: 🇺🇸_US_美国_16
+  - &id007
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
     type: vmess
-    server: 107.167.7.22
-    port: 41654
+    server: qzcn2-01.dajuzi.cc
+    port: 15596
     cipher: auto
-    uuid: bdee202c-8fae-441f-a588-7bc4d3887019
-    alterId: 64
+    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+    alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 45.12.112.114
-    port: 54774
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 192.74.229.198
-    port: 51592
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇹🇷_TR_土耳其_1
-    type: ss
-    server: 45.89.52.66
-    port: 9005
-    password: ZET59LF6DvCC8KVt
-    cipher: aes-256-cfb
-  - &id022
-    name: 🇸🇬_SG_新加坡_1
-    type: ss
-    server: 54.255.237.136
-    port: 2333
-    password: doub.io
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: ssr
-    server: usa1.vfun.icu
+  - &id008
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: 146.190.90.244
     port: 443
-    password: vyunme
-    cipher: aes-256-cfb
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: ab93117422.jd.hk
-    protocol-param: 17422:TTp0SX
-  - &id025
-    name: 🇺🇸_US_美国_19
-    type: vmess
-    server: 198.2.203.60
-    port: 44672
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    udp: true
+    password: a185ed4c-2b5c-4a6f-a674-4b67f9c3bfbc
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇸🇬_SG_新加坡_2
-    type: ss
-    server: 13.229.98.23
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id027
-    name: 🇺🇸_US_美国_20
-    type: vmess
-    server: 198.2.203.54
-    port: 44672
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
+  - &id009
     name: 🇹🇼_TW_台湾
     type: ss
     server: 103.177.33.180
@@ -322,75 +116,254 @@ proxies:
       host: wtw1000mline004.chilines.club
       path: /isaifqaagpi
       mux: true
-  - &id029
-    name: 🇹🇷_TR_土耳其_2
+  - &id010
+    name: 🇺🇸_US_美国_7
     type: ss
-    server: 45.89.52.66
-    port: 9003
-    password: JdmRK9gMEqFgs8nP
-    cipher: aes-256-cfb
-  - &id030
-    name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 43.202.55.210
+    server: 216.52.183.244
+    port: 80
+    password: 83XvX4Vo%*3a
+    cipher: aes-128-gcm
+    plugin: obfs
+    plugin-opts:
+      mode: http
+  - &id011
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 89.163.220.99
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id031
-    name: 🇳🇱_NL_荷兰
+    udp: true
+    password: 274fefdb-6159-4765-b3e8-c6050b23b48f
+    sni: mzy.windowsupdatea.com
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: trojan
+    server: 74.217.179.22
+    port: 443
+    udp: true
+    password: 274fefdb-6159-4765-b3e8-c6050b23b48f
+    sni: mzy.windowsupdatea.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇰🇪_KE_肯尼亚
     type: ss
-    server: masting.xyz
-    port: 8080
-    password: XlUFgoOqDlVqlZFD3Js0YA
-    cipher: chacha20-ietf-poly1305
-  - &id032
-    name: 🇰🇷_KR_韩国_2
-    type: ss
-    server: 221.150.109.69
-    port: 2003
-    password: qwerREWQ@@
-    cipher: aes-256-cfb
-  - &id033
-    name: 🇳🇴_NO_挪威
-    type: ss
-    server: 185.90.61.153
+    server: 62.12.116.66
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id034
-    name: 🇺🇸_US_美国_21
+  - &id014
+    name: 🇺🇸_US_美国_9
     type: vmess
-    server: 192.74.232.228
-    port: 52312
+    server: us.mlxg.org
+    port: 80
+    cipher: auto
+    uuid: c7442852-5a48-4456-8783-b7b8eebbca6c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us1.mlxg.org
+  - &id015
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 142.4.109.68
+    port: 46672
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id035
-    name: 🇯🇵_JP_日本->🇸🇬_SG_新加坡
-    type: trojan
-    server: spsg.1234567890spcloud.com
-    port: 443
-    udp: true
-    password: e8e027f7-0672-43d4-8001-535b58852b2f
+  - &id016
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+    type: vmess
+    server: cdn.anycast.eu.org
+    port: 80
+    cipher: auto
+    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      headers:
+        host: week-permalink-samsung-omissions.trycloudflare.com
+  - &id017
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.25.179.44
+    port: 8080
+    cipher: auto
+    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id018
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 23.224.202.86
+    port: 57702
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id036
-    name: 🇯🇵_JP_日本
+  - &id019
+    name: 🇸🇬_SG_新加坡
     type: vmess
-    server: jp-a.2022app.xyz
+    server: 118.107.46.173
     port: 443
     cipher: auto
-    uuid: 2e361419-b3fd-4a2a-bb65-27c171bf2540
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/080712342310
+  - &id020
+    name: 🇭🇰_HK_香港
+    type: vmess
+    server: 43.154.233.89
+    port: 45516
+    cipher: auto
+    uuid: 2264f24e-d814-4aa6-98c0-ed5a8322a0eb
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /hk12/getData
+      headers:
+        host: hk12.verichains.co
+  - &id021
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 23.108.100.101
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    servername: www.40587333.xyz
+    network: ws
+    ws-opts:
+      path: /footers
+  - &id022
+    name: 🇷🇸_RS_塞尔维亚
+    type: vmess
+    server: 37.120.193.102
+    port: 52920
+    cipher: auto
+    uuid: 57170ff0-7180-4664-8f61-8debdda345f7
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇮🇳_IN_印度
+    type: ss
+    server: 139.59.1.39
+    port: 443
+    password: MWiIVYCyO8FfybKWhjt9Sz
+    cipher: chacha20-ietf-poly1305
+  - &id024
+    name: 🇨🇾_CY_塞浦路斯
+    type: vmess
+    server: 203.23.104.190
+    port: 443
+    cipher: auto
+    uuid: 495FAF9E-9775-4DC5-91F0-C4341B789B4F
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: jp-a.2022app.xyz
     network: ws
     ws-opts:
-      path: /0i4svkpyie53zred
+      path: /speedtest
+      headers:
+        host: Dusseldorf.kotick.site
+  - &id025
+    name: 🇹🇷_TR_土耳其_1
+    type: ss
+    server: 45.89.52.66
+    port: 9065
+    password: PeHSHm5SqEjBuEXE
+    cipher: aes-256-cfb
+  - &id026
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 47.104.240.230
+    port: 50002
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: digitalocean.com
+    port: 8080
+    cipher: auto
+    uuid: c3b11744-2b20-46af-f0d4-69122be36e74
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vcus.vpn66.eu.org
+  - &id028
+    name: 🇹🇷_TR_土耳其_2
+    type: ss
+    server: 45.89.52.66
+    port: 9011
+    password: M3t2ZEQcMGRWBjRa
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: 8abe9496-5e24-4e49-b566-dcf86116017d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /i99LgvSaslbsPLLQQ7j6Z
+      headers:
+        host: de5.irteh.fun
+  - &id030
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 104.25.167.88
+    port: 443
+    cipher: auto
+    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: a2284cc1
+      headers:
+        host: dedi2.1808.cf
 proxy-groups:
   - name: PROXY
     type: select
@@ -447,12 +420,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -488,12 +455,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -527,12 +488,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
